refactor: <phase name>

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# App
-NEOCORE_ENV=dev
-NEOCORE_API_KEY=change_me
+# --- required ---
+NEOCORE_API_KEY=dev-12345
 
-# Azure Foundry (placeholders for later)
-FOUNDRY_ENDPOINT=
-FOUNDRY_MODEL_ADVISOR=
-FOUNDRY_MODEL_MONARCH=
+AZURE_AOAI_ENDPOINT=https://YOUR-RESOURCE-NAME.openai.azure.com
+AZURE_AOAI_API_KEY=YOUR_KEY
+AZURE_AOAI_API_VERSION=2024-xx-xx
+
+# deployments (names in Azure Foundry / Azure OpenAI deployments)
+AZURE_AOAI_MODEL_BUILDER=gpt-4.1-mini
+AZURE_AOAI_MODEL_SKEPTIC=gpt-4.1-mini
+AZURE_AOAI_MODEL_OPTIMIZER=gpt-4.1-mini
+AZURE_AOAI_MODEL_USER=gpt-4.1-mini
+AZURE_AOAI_MODEL_MONARCH=gpt-4.1-mini
