--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.12.0
 certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.1.8
 exceptiongroup==1.3.1
 fastapi==0.115.6
@@ -13,8 +14,10 @@ pydantic==2.10.3
 pydantic_core==2.27.1
 python-dotenv==1.0.1
 PyYAML==6.0.3
+requests==2.32.5
 starlette==0.41.3
 typing_extensions==4.15.0
+urllib3==2.6.2
 uvicorn==0.32.1
 uvloop==0.22.1
 watchfiles==1.1.1
